--- a/fronted/public/views/usuarios/soli_actualizar.html
+++ b/fronted/public/views/usuarios/soli_actualizar.html
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <main class="main">+
+    <main class="main">
         <div class="main__overlay">
             <h3 class="main__text">Para el ingreso de la actualización de datos, se solicitará el ID de la persona</h3>
             <div class="form">
@@ -29,10 +29,10 @@
                     </svg> 
                 </div>
 
-                <input type="text" class="form__input-field" id="userID" placeholder="Ingrese el ID">
-                <div id="mensajeValidacion"></div> <!-- Mensaje de error -->
+                <input type="text" class="form__input-field" id="user-id" placeholder="Ingrese el ID">
+                <div id="message-validation" class="form__message"></div> <!-- Mensaje de error -->
 
-                <button class="form__submit-button" id="enviarBtn"><h3>Enviar</h3></button>
+                <button class="form__submit-button" id="send-btn"><h3 class="form__submit-button-text">Enviar</h3></button>
             </div>
         </div>
     </main>
