--- a/fronted/public/views/sensores/datos_sensor.html
+++ b/fronted/public/views/sensores/datos_sensor.html
@@ -44,7 +44,6 @@
                     </select>
                 </div>
             </div>
-    
             <div class="form__btn-group">
                 <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_sensor.html">Actualizar</a></button>
                 <a href="deshabilitar_sensor.html" class="btn__secundary">Deshabilitar</a>
@@ -52,5 +51,4 @@
         </form>
     </main>
     <script src="/fronted/public/js/sensores/validacion_datos.js"></script>
-</body>
-</html>
+</body
