--- a/fronted/public/views/sensores/ID_sensores_actualizar.html
+++ b/fronted/public/views/sensores/ID_sensores_actualizar.html
@@ -20,9 +20,11 @@
                 <label class="sensor-content__label">ID Sensor</label>
                 <input class="sensor-content__input" type="text" id="idSensor">
                 
-                <div id="mensaje" class="mensaje"></div>
+                <div id="mensaje" class="sensor-content__mensaje"></div>
 
-                <button id="enviarBtn" class="sensor-content__button"><a href="datos_sensor.html">Enviar</a></button>
+                <button id="enviarBtn" class="sensor-content__button">
+                    <a href="datos_sensor.html" class="sensor-content__button-link">Enviar</a>
+                </button>
             </div>
         </div>
     </main>
