--- a/fronted/public/views/sensores/deshabilitar_sensor.html
+++ b/fronted/public/views/sensores/deshabilitar_sensor.html
@@ -45,8 +45,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_sensor.html">Actualizar</a></button>
-                <a href="datos_sensor.html" class="btn__secundary">Habilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
+                <a href="datos_sensor.html" class="form__btn btn__secundary">Habilitar</a>
             </div>
         </form>
     </main>
