--- a/fronted/public/views/sensores/ID_sensores_deshabilitar.html
+++ b/fronted/public/views/sensores/ID_sensores_deshabilitar.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Sensor</title>
-    <link rel="stylesheet" href="../CSS/style_ID_sensores.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/sensores/style_ID_sensores.css">
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+        <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main>
@@ -19,7 +19,7 @@
                 <label class="sensor-content__label">ID Sensor</label>
                 <input class="sensor-content__input" type="text" id="idSensor">
                 
-                <div id="mensaje" class="mensaje"></div>
+                <div id="mensaje" class="sensor-content__mensaje"></div>
 
                 <button id="enviarBtn" class="sensor-content__button">Enviar</button>
             </div>
