--- a/fronted/public/views/sensores/ID_sensores_habilitar.html
+++ b/fronted/public/views/sensores/ID_sensores_habilitar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Sensor</title>
-    <link rel="stylesheet" href="../CSS/style_ID_sensores.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/sensores/style_ID_sensores.css">
     <link rel="stylesheet" href="/fronted/public/css/components/header.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <label class="sensor-content__label">ID Sensor</label>
                 <input class="sensor-content__input" type="text" id="idSensor">
                 
-                <div id="mensaje" class="mensaje"></div>
+                <div id="mensaje" class="sensor-content__mensaje"></div>
 
                 <button id="enviarBtn" class="sensor-content__button">Enviar</button>
             </div>
