--- a/fronted/public/views/vizualisar/html/crear_asociacion.html
+++ b/fronted/public/views/vizualisar/html/crear_asociacion.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -13,109 +12,110 @@
 <body class="pagina">
     <header class="cabecera">
         <div class="cabecera__logo">
-            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA"
-                class="cabecera__logo-img">
+            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
-            <a href="#" class="cabecera__enlace">Inicio</a>
+            <a href="/fronted/public/views/homes/index.html" class="cabecera__enlace">Inicio</a>
             <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
-            <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
-            <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar</a>
-            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar/Deshabilitar</a>
+            <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar Asociación</a>
+            <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar Asociación</a>
+            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar</a>
             <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
             <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
         </nav>
+        
     </header>
-    <main class="asociacion">
-        <form class="formulario">
-            <h1 class="asociacion__titulo">Crear Asociación</h1>
-            <p class="asociacion__descripcion">
-                Ingrese la información para crear una nueva asociación
-            </p>
-
-            <div class="formulario__grid">
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Nombre Asociación</label>
-                    <input type="text" class="formulario__entrada" placeholder="Nombre Asociación">
-                </div>
-
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Inversión</label>
-                    <input type="number" class="formulario__entrada" placeholder="Inversión">
-                </div>
-
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Meta</label>
-                    <input type="number" class="formulario__entrada" placeholder="Meta Gana">
-                </div>
-
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Inicio Produccion</label>
-                    <input type="date" class="formulario__entrada" placeholder="Meta Gana">
-                </div>
-
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Fin Produccion</label>
-                    <input type="date" class="formulario__entrada" placeholder="Meta Gana">
-                </div>
-
-                <div class="formulario__columna">
-
-                    <label class="formulario__etiqueta">Cultivo</label>
-                    <select class="formulario__selector">
-                        <option value="">Seleccione un cultivo</option>
-                        <option value="cultivo1">Cultivo 1</option>
-                        <option value="cultivo2">Cultivo 2</option>
-                        <option value="cultivo3">Cultivo 3</option>
-                    </select>
-                    <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">Crear Cultivo</a></button>
-                </div>
-
-
-                <div class="formulario__columna">
-
-                    <label class="formulario__etiqueta">Sensores</label>
-                    <select class="formulario__selector">
-                        <option value="">Agregar Sensores</option>
-                        <option value="sensor1">Sensor 1</option>
-                        <option value="sensor2">Sensor 2</option>
-                        <option value="sensor3">Sensor 3</option>
-                    </select>
-                    <button><a href="/fronted/public/views/sensores/crear_sensor.html">Crear Sensor</a></button>
-                </div>
-
-                <div class="formulario__columna">
-
-                    <label class="formulario__etiqueta">Insumos</label>
-                    <select class="formulario__selector">
-                        <option value="">Agregar Insumos</option>
-                        <option value="insumo1">Insumo 1</option>
-                        <option value="insumo2">Insumo 2</option>
-                        <option value="insumo3">Insumo 3</option>
-                    </select>
-                    <button><a href="/fronted/public/views/insumos/crear_inusomo.html">Crear Insumo</a></button>
-                </div>
-
-                <div class="formulario__columna">
-                    <label class="formulario__etiqueta">Ciclo Cultivo</label>
-                    <select class="formulario__selector">
-                        <option value="">Agregar Ciclo Cultivo</option>
-                        <option value="ciclo1">Ciclo 1</option>
-                        <option value="ciclo2">Ciclo 2</option>
-                        <option value="ciclo3">Ciclo 3</option>
-                    </select>
-                    <button><a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html">Crear
-                            Ciclo</a></button>
-                </div>
-
-
-
-            </div>
-
-            <button class="formulario__boton" type="submit">Crear Asociación</button>
-        </form>
-    </main>
-
-</body>
-
+    
+    <nav class="cabecera__nav">
+       
+        <main class="asociacion">
+            <form class="formulario"> <h1 class="asociacion__titulo">Crear Asociación</h1>
+                <p class="asociacion__descripcion">
+                    Ingrese la información para crear una nueva asociación
+                </p>
+    
+                <div class="formulario__grid">
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Nombre Asociación</label>
+                        <input type="text" class="formulario__entrada" placeholder="Nombre Asociación">
+                    </div>
+    
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Inversión</label>
+                        <input type="number" class="formulario__entrada" placeholder="Inversión">
+                    </div>
+    
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Meta</label>
+                        <input type="number" class="formulario__entrada" placeholder="Meta Gana">
+                    </div>
+    
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Inicio Produccion</label>
+                        <input type="date" class="formulario__entrada" placeholder="Meta Gana">
+                    </div>
+    
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Fin Produccion</label>
+                        <input type="date" class="formulario__entrada" placeholder="Meta Gana">
+                    </div>
+    
+                    <div class="formulario__columna">
+    
+                        <label class="formulario__etiqueta">Cultivo</label>
+                        <select class="formulario__selector">
+                            <option value="">Seleccione un cultivo</option>
+                            <option value="cultivo1">Cultivo 1</option>
+                            <option value="cultivo2">Cultivo 2</option>
+                            <option value="cultivo3">Cultivo 3</option>
+                        </select>
+                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">Crear Cultivo</a></button>
+                    </div>
+    
+    
+                    <div class="formulario__columna">
+    
+                        <label class="formulario__etiqueta">Sensores</label>
+                        <select class="formulario__selector">
+                            <option value="">Agregar Sensores</option>
+                            <option value="sensor1">Sensor 1</option>
+                            <option value="sensor2">Sensor 2</option>
+                            <option value="sensor3">Sensor 3</option>
+                        </select>
+                        <button><a href="/fronted/public/views/sensores/crear_sensor.html">Crear Sensor</a></button>
+                    </div>
+    
+                    <div class="formulario__columna">
+    
+                        <label class="formulario__etiqueta">Insumos</label>
+                        <select class="formulario__selector">
+                            <option value="">Agregar Insumos</option>
+                            <option value="insumo1">Insumo 1</option>
+                            <option value="insumo2">Insumo 2</option>
+                            <option value="insumo3">Insumo 3</option>
+                        </select>
+                        <button><a href="/fronted/public/views/insumos/crear_inusomo.html">Crear Insumo</a></button>
+                    </div>
+    
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Ciclo Cultivo</label>
+                        <select class="formulario__selector">
+                            <option value="">Agregar Ciclo Cultivo</option>
+                            <option value="ciclo1">Ciclo 1</option>
+                            <option value="ciclo2">Ciclo 2</option>
+                            <option value="ciclo3">Ciclo 3</option>
+                        </select>
+                        <button><a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html">Crear
+                                Ciclo</a></button>
+                    </div>
+    
+    
+    
+                </div> <button class="formulario__boton" type="submit">Crear Asociación</button>
+            </form>
+        </main> 
+        </main>
+    
+    </body>
+    
 </html>
