--- a/fronted/public/views/vizualisar/html/actualizar_asociacion.html
+++ b/fronted/public/views/vizualisar/html/actualizar_asociacion.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentación de Cultivos</title>
-    <link rel="stylesheet" href="../css/styleprac.css">
-    <link rel="stylesheet" href="../css/habilitar.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/styleprac.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/habilitar.css">
 </head>
 <body class="pagina">
     <header class="cabecera">
