--- a/fronted/public/views/vizualisar/html/generar_reporte.html
+++ b/fronted/public/views/vizualisar/html/generar_reporte.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generar Reporte</title>
-    <link rel="stylesheet" href="../css/styleprac.css">
-    <link rel="stylesheet" href="../css/generar_reporte.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/styleprac.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/generar_reporte.css">
     <link rel="stylesheet" href="/fronted/public/css/variables.css">
     </head>
 <body class="pagina">
