--- a/fronted/public/views/vizualisar/html/listar_asociaciones.html
+++ b/fronted/public/views/vizualisar/html/listar_asociaciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Registros de Cultivos</title>
-    <link rel="stylesheet" href="../css/styleprac.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/styleprac.css">
     <link rel="stylesheet" href="/fronted/public/css/components/listar.css">
 </head>
 <body>
