--- a/fronted/public/views/vizualisar/html/habilitar_deshabilitar.html
+++ b/fronted/public/views/vizualisar/html/habilitar_deshabilitar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/habilitar.css">
-    <link rel="stylesheet" href="../css/styleprac.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/habilitar.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/visualizar/styleprac.css">
     <title>Habilitar y Deshabilitar Asociación</title>
 </head>
 <body class="pagina visualizar-fondo">
